# Kargo

./: ReadMe.md  docker-compose.yml
.devcontainer/: DockerFile  devcontainer.json
backend/: .gitignore  manage.py  pyproject.toml
backend/apps/core/: views.py
backend/apps/core/tests/: tests_generic.py
backend/apps/user/: adapters.py  auth.py  dao.py  models.py  requests.py  serializers.py  service.py  urls.py  validations.py  views.py
backend/apps/user/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_invitecode.py
backend/apps/user/tests/: tests_service.py  tests_views.py
backend/kargo/: __init__.py  asgi.py  conf.py  settings.py  urls.py  wsgi.py
